<?xml version="1.0" encoding="utf-8"?>
<resources>
  
    <string name="app_name">myBusTrack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="statusReminder">Напоминаний нет</string>
    <string name="routeId">Маршрут: </string>
    <string name="duration">Напомнить за : </string>
    <string name="durationReal">До прибытия: </string>
    <string name="distance">Дистанция: </string>
    <string name="distanceMap">Дистанция: </string>
    <string name="distanceMapView">0 км </string>
    <string name="durationMap">До прибытия: </string>
    <string name="durationMapView">0 мин. </string>
    <string name="chooseTypePoint">Тип моего местоположения</string>
    <string name="setTypeMap">Сменить тип карты</string>
    <string name="saveReminder">Сохранить</string>
    <string name="refactorReminder">Изменить</string>
    <string name="delReminder">Удалить</string>
    <string name="addReminder">Добавить</string>
    <string name="setDurationView">Укажите время</string>
    <string name="setRouteId">Выберите маршрут</string>

    <string name="spinerPrompt">Маршрут</string>

    <string name="number_picker_formatter">%02d</string>

    <!-- Font -->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
</resources>
