<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@drawable/back">

	<Button
        android:id="@+id/saveReminder"
		android:theme="@style/MyButton"
		android:textAllCaps="false"
		android:textColor="@color/primary_dark"
		android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/saveReminder"
		android:background="@android:drawable/btn_default"
		android:textSize="18sp"
		android:layout_width="wrap_content" />

	<TextView
        android:id="@+id/setRouteId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:text="@string/setRouteId"
        android:textSize="24sp"
		android:layout_marginStart="10dp"
        android:textColor="@color/colorPrimaryLight"
		android:layout_alignParentTop="false"
		android:layout_alignParentLeft="false" />

	<TextView
  	    android:id="@+id/setDurationView"
		android:textColor="@color/colorPrimaryLight"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
		android:text="@string/setDurationView"
  	    android:textSize="24sp"
		android:layout_below="@+id/setRouteId"
		android:layout_alignLeft="@+id/setRouteId"
		android:layout_marginTop="55dp" />

	<com.devfill.mybustrack.helper.SpinnerTextView
		android:id="@+id/spinnertextview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:entries="@array/fruits"
		android:prompt="@string/spinerPrompt"
		android:textColor="@color/primary_dark"
		android:textSize="18sp"
		android:layout_below="@+id/setRouteId"
		android:layout_marginTop="5dp"
		android:layout_marginStart="40dp"
		android:background="@android:drawable/btn_dropdown" />

	<Button
		android:text="10 минут"
		android:textAllCaps="false"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/enterTime"
		android:background="@android:drawable/btn_default"
		android:textColor="@color/primary_dark"
		android:layout_below="@+id/setDurationView"
		android:layout_alignLeft="@+id/spinnertextview"
		android:theme="@style/MyButton"/>


</RelativeLayout>